# simple_dbms

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  main.rs  schema.rs  wal.rs
src/engine/: alter_table.rs  constraints.rs  create_table.rs  delete.rs  drop_table.rs  index.rs  insert.rs  mod.rs  select.rs  transaction.rs  update.rs  value_key.rs  where_clause.rs
src/engine/tests/: alter_table.rs  create_table.rs  delete.rs  drop_table.rs  index.rs  insert.rs  mod.rs  select.rs  transaction.rs  update.rs  where_comparisons.rs
src/engine/wal/: mod.rs  row.rs  table.rs  wal_binary.rs
src/storage/: constraints.rs  layout.rs  mod.rs  row_store.rs  schema_store.rs
src/storage/backend/: json.rs  mod.rs  tests.rs
src/storage/backend/btree/: integration_tests.rs  layout.rs  mod.rs  page_file.rs  row_binary.rs  schema_binary.rs  tests.rs
src/storage/backend/json/: mod.rs
