[package]
name = "simple_dbms"
version = "0.1.0"
edition = "2024"

[features]
default = ["btree"]
btree = []
json = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
thiserror = "1.0"
tempfile = "3.10"
pesqlite = "0.1"

[dev-dependencies]
rand = "0.8"
